--- a/thesis-a/report/introduction.tex
+++ b/thesis-a/report/introduction.tex
@@ -5,7 +5,8 @@ finalising their BE, or other, degree.  Such requirements are both in
 relation to the physical appearance of the thesis, as well as the writing
 style and organisation.  The present document tries to concisely state the
 theses requirements while appearing in layout and structure as a thesis
-itself.
+
+In the context of seL4, because most of the system services do not reside in the kernel, but instead are hoisted into user-space, it is critical that seL4 developers have sufficient tooling such that they can diagnose performance issues. (Could talk about the fact that there is limited support for profiling in the kernel, and so it is no use to developers in user-space)
 
 Chapter~\ref{ch:background} explains the background for this document.
 Chapter~\ref{ch:style} states the style and submission related requirements
