--- a/thesis-a/report/pubs.bib
+++ b/thesis-a/report/pubs.bib
@@ -68,3 +68,188 @@
       thesis\_format\_guide.pdf\hspace{0cm}\relax, accessed 14/04/2015},
    year={2014},
    note={Graduate Research School, UNSW} }
+
+@online{ManGprof,
+   author = "BSD",
+   title = "gprof man pages",
+   url = "https://www.unix.com/man-page/FreeBSD/1/gprof"
+}
+
+@online{ManGCC,
+   author = "GCC project",
+   title = "gcc man pages",
+   url = "https://man7.org/linux/man-pages/man1/gcc.1.html"
+}
+
+@online{DocsGCCExtendedAsm,
+   author = "GCC project",
+   title = "6.47.2 Extended Asm - Assembler Instructions with C Expression Operands",
+   url = "https://gcc.gnu.org/onlinedocs/gcc/Extended-Asm.html"
+}
+
+@online{ManSetITimer,
+   author = "John Levon",
+   title = "Chapter 5. Interpreting profiling results",
+   url = "https://oprofile.sourceforge.io/doc/interpreting.html"
+}
+
+@online{ManPerfCLI,
+   author = "Linux",
+   title = "perf(1) - Linux manual page",
+   url = "https://man7.org/linux/man-pages/man1/perf.1.html"
+}
+
+@online{SeL4DocsThreads,
+   author = "sel4.systems",
+   title = "Threads",
+   url = "https://docs.sel4.systems/Tutorials/threads.html"
+}
+
+@online{DocsOProfileInter,
+   author = "die.net",
+   title = "setitimer(2) - Linux man page",
+   url = "https://linux.die.net/man/2/setitimer"
+}
+
+@online{DocsGProfImpl,
+   author = "Jay Fenlason",
+   title = "Implementation of Profiling",
+   url = "https://sourceware.org/binutils/docs/gprof/Implementation.html#Implementation"
+}
+
+@online{DocsArmv8PMU,
+   author = "ARM",
+   title = "Armv8.1-M Performance Monitoring User Guide",
+   url = "https://documentation-service.arm.com/static/5f33dafc60a93e65927c47a9"
+}
+
+@online{DocsArvm7,
+   author = "ARM",
+   title = "ARM Architecture Reference Manual ARMv7-A and ARMv7-R edition",
+   url = "https://developer.arm.com/documentation/ddi0406/b/Debug-Architecture"
+}
+
+@online{DocsArmCortexA15PMU,
+   author = "ARM",
+   title = "About the PMU",
+   url = "https://developer.arm.com/documentation/ddi0438/h/Performance-Monitor-Unit/About-the-PMU?lang=en"
+}
+
+@online{DocsArmCortexM55PMUCtrs,
+   author = "ARM",
+   title = "About the PMU",
+   url = "https://developer.arm.com/documentation/100026/0101/performance-monitor-unit/about-the-pmu?lang=en"
+}
+
+@online{DocsArmCortexR52PMUCtrs,
+   author = "ARM",
+   title = "About the PMU",
+   url = "https://developer.arm.com/documentation/100026/0101/performance-monitor-unit/about-the-pmu?lang=en"
+}
+
+@online{DocsArmv7PMURegs,
+   author = "ARM",
+   title = "Performance monitor registers",
+   url = "https://developer.arm.com/documentation/ddi0406/b/Debug-Architecture/Debug-Registers-Reference/Performance-monitor-registers?lang=en"
+}
+
+@online{DocsArmMCR,
+   author = "ARM",
+   title = "MCR, MCR2, MCRR, and MCRR2",
+   url = "https://developer.arm.com/documentation/dui0489/c/arm-and-thumb-instructions/coprocessor-instructions/mcr--mcr2--mcrr--and-mcrr2?lang=en"
+}
+
+@online{DocsArmMRC,
+   author = "ARM",
+   title = "MRC, MRC2, MRRC and MRRC2",
+   url = "https://developer.arm.com/documentation/dui0489/c/arm-and-thumb-instructions/coprocessor-instructions/mrc--mrc2--mrrc-and-mrrc2?lang=en"
+}
+
+@online{DocsArmArchProfiles,
+   author = "ARM",
+   title = "ARM architecture profiles",
+   url = "https://developer.arm.com/documentation/dui0471/i/key-features-of-arm-architecture-versions/arm-architecture-profiles"
+}
+
+@online{DocsRISCVISANaming,
+   author = "RISC-V Foundation",
+   title = "ISA Extension Naming Conventions",
+   url = "https://five-embeddev.com/riscv-isa-manual/latest/naming.html"
+}
+
+@online{DocsRISVISAPerfCounters,
+   author = "RISC-V Foundation",
+   title = "Counters",
+   url = "https://five-embeddev.com/riscv-isa-manual/latest/counters.html"
+}
+
+@online{DocsIntel64IA32Vol3B,
+   author = "Intel",
+   title = "Intel® 64 and IA-32 Architectures Developer's Manual: Vol. 3B",
+   url = "https://www.intel.la/content/www/xl/es/architecture-and-technology/64-ia-32-architectures-software-developer-vol-3b-part-2-manual.html"
+}
+
+@online{DocsSeL4Hardware,
+   author = "seL4",
+   title = "Supported Platforms",
+   url = "https://docs.sel4.systems/Hardware/"
+}
+
+@online{DocsRedHatPCL,
+   author = "Red Hat",
+   title = "PERFORMANCE COUNTERS FOR LINUX (PCL) TOOLS AND PERF",
+   url = "https://access.redhat.com/documentation/en-us/red_hat_enterprise_linux/6/html/developer_guide/perf"
+}
+
+@online{DocsUnofficialLinxPerfEvents,
+   author = "Vince Weaver",
+   title = "The Unofficial Linux Perf Events Web-Page",
+   url = "https://web.eece.maine.edu/~vweaver/projects/perf_events"
+}
+
+@online{BlogBrendandGreggPerf,
+   author = "Brendan Gregg",
+   title = "perf Examples",
+   url = "https://www.brendangregg.com/perf.html"
+}
+
+@online{SPECCPU2017,
+   author = "spec",
+   title = "SPEC CPU® 2017",
+   url = "https://www.spec.org/cpu2017/"
+}
+
+@online{GithubSel4bench,
+   author = "seL4",
+   title = "sel4bench",
+   url = "https://github.com/seL4/sel4bench/README.md"
+}
+
+@online{github_libsel4bench_sel4bench_header,
+   author = "seL4",
+   title = "sel4bench.h",
+   url = "https://github.com/seL4/seL4_libs/blob/14d3c94f5164c993033a35a5d9e23ba6dcf12f5f/libsel4bench/include/sel4bench/sel4bench.h"
+}
+
+@online{TutHowToUsePMU,
+   author = "Resource Allocation and Scheduling Group (RASG) @SCI-Pitt",
+   title = "How to Use ARM Performance Monitoring Units(PMU) in ARMv7",
+   url = "https://pittrasg.github.io/blog/2020/pmusarm/"
+}
+
+@online{GlossArmISA,
+   author = "ARM",
+   title = "Instruction Set Architecture (ISA)",
+   url = "https://www.arm.com/glossary/isa"
+}
+
+@online{ArticleEmbeddedTwoPercSol,
+   author = "Jim Turley",
+   title = "The Two Percent Solution",
+   url = "https://www.embedded.com/the-two-percent-solution",
+}
+
+%% Not yet citated
+%% http://www.emerson.emory.edu/services/gcc/html/Extended_Asm.html
+%% https://pittrasg.github.io/blog/2020/pmusarm/
+%% https://developer.arm.com/documentation/ddi0464/f/ Armv7
