--- a/thesis-a/report/report-a.tex
+++ b/thesis-a/report/report-a.tex
@@ -1,5 +1,7 @@
 \documentclass[]{unswthesis}
 
+\newcommand{\shellcmd}[1]{\fbox{\texttt{#1}}}
+
 %%% Class options:
 
 %  undergrad (default)
@@ -14,6 +16,7 @@
 %  oneside (default for hdr)
 %  twoside (default for undergrad)
 
+\usepackage{minted}
 \usepackage{multicol}
 \usepackage{listings}
 
